webapp/src/styles/ui-components.scss
/* ... */
.load-container {
  width: 100%;
  height: 100%;
  position: absolute;
}

.sidebar {
  width: 248px;
  padding: 12px 9px;
}

.sidebar-header {
  line-height: normal;
  .icon-holder {
    border-radius: 9px;
    border: 2px solid $light-primary-color;
    padding: 5px 5px;
    margin-right: 10px;
    margin-bottom: 10px;
    float: left;
    background-color: $light-background;
    .icon {
      font-size: 30px;
      line-height: 30px;
      color: $primary-color;
      .bitmap {
        height: 30px;
      }
    }
  }
}

.stack {
  display: flex;
  width: 100%;
  height: 100%;
  div.grow {
    position: relative;
    flex: 1;
  }
}

.stack.start-align {
  align-items: flex-start;
  justify-content: center;
  .description {
    padding-top: 20px;
    padding-bottom: 0px;
    padding-left: 10px;
    padding-right: 10px;
  }
}

.stack.wrap    {
  flex-wrap: wrap;
}

.stack.vertical {
  flex-direction: column;
}

.stack.horizontal {
  flex-direction: row;
}

.stack.spread {
  justify-content: space-around;
  align-content: space-around;
}

.pointer {
  cursor: pointer;
}

.large-modal {
  height: calc(100vh - 150px);
  width: calc(100vw - 150px);
}

.tall-modal {
  max-height: calc(100vh - 150px);
}

.centering-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.scroll-within {
  overflow: auto;
}

.query-editor-container {
  padding: 5px;
}
/* ... */

